--- a/changelog.txt
+++ b/changelog.txt
@@ -30,6 +30,11 @@
 
 ==Bug Fixes==
 
+=3.2.5 (2019-10-25)=
+
+==Bug Fixes==
+* Restore channel mask correctly for AU/US AT+FSB=0
+
 =3.2.4 (2019-10-22)=
 
 ==Bug Fixes==
